--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('bg.jpg') no-repeat center center fixed;
+      background: url('bg.JPG') no-repeat center center fixed;
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -137,7 +137,7 @@ src="https://www.facebook.com/tr?id=1318990953124693&ev=PageView&noscript=1"
   <h3>💥 ICC CRICKET PREDICTION™ 💥</h3>
   <h5>✅ High-Quality, In-Depth Insights ✅</h5>
   <div class="photo">
-    <img src="logo.jpg" alt="Logo" loading="lazy">
+    <img src="logo.JPG" alt="Logo" loading="lazy">
   </div>
   <h4>⚡BACK-TO-BACK MATCH Analysis⚡</h4>
   <h4>⚡63/64 World Cup Toss Work⚡</h4>
